--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -45,10 +45,10 @@
 			
 <h1>Unser Team!</h1></br>
 
-<center><table>
+<table>
 	<tr>
 		<th width="200" align="center"></th>
-		<th width="200" align="center"><h1>Geschäftsführung</h1></th>
+		<th width="200" align="center"><h1>Gesch&aumlftsf&uumlhrung</h1></th>
 		<th width="200" align="center"></th>
 	</tr>
 	<tr>
